--- a/sass/layout/_section-about.scss
+++ b/sass/layout/_section-about.scss
@@ -62,6 +62,7 @@
     letter-spacing: .2rem;
     transition:all .2s;
     margin-bottom: $margin-bottom-small;
+    text-shadow: .5rem 1rem 1.5rem rgba($color-black,0.15);
     
 
     @include respond (tab-land) {
@@ -84,7 +85,7 @@
 
     &:hover{
         transform:skewY(2deg) skewX(15deg);
-        text-shadow: .5rem 1rem 2rem rgba($color-black,0.2);
+        text-shadow: 2rem 1.5rem 0.7rem rgba($color-black,.60);
         
     }
  
